--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -500,7 +500,7 @@
     <Content Include="Vue\Clientes\Sugestoes\Templates\LstSugestaoCliente.Filtro.html" />
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
     <Content Include="Vue\PlanosConta\Componentes\LstPlanosConta.Filtro.js" />
-    <Content Include="Vue\PlanosConta\GruposConta\CategoriasConta\Componentes\LstCategoriasConta.js" />
+    <Content Include="Vue\PlanosConta\CategoriasConta\Componentes\LstCategoriasConta.js" />
     <Content Include="Vue\PlanosConta\GruposConta\Componentes\LstGruposConta.js" />
     <Content Include="Vue\PlanosConta\Templates\LstPlanosConta.Filtro.html" />
     <Content Include="Vue\Producao\Roteiros\Classificacoes\Componentes\LstClassificacoesRoteiro.js" />
