--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -434,8 +434,8 @@
     <Compile Include="Helper\Comissionados\TraducaoOrdenacaoListaComissionados.cs" />
     <Compile Include="Helper\Imagens\Estrategias\Exibicao\ExibicaoSvgProjetoStrategy.cs" />
     <Compile Include="Helper\Imagens\Estrategias\Exibicao\ExibicaoPecaProducaoStrategy.cs" />
-    <Compile Include="Helper\PlanosConta\GruposConta\CategoriasConta\ConverterCadastroAtualizacaoParaCategoriaConta.cs" />
-    <Compile Include="Helper\PlanosConta\GruposConta\CategoriasConta\TraducaoOrdenacaoListaCategoriasConta.cs" />
+    <Compile Include="Helper\PlanosConta\CategoriasConta\ConverterCadastroAtualizacaoParaCategoriaConta.cs" />
+    <Compile Include="Helper\PlanosConta\CategoriasConta\TraducaoOrdenacaoListaCategoriasConta.cs" />
     <Compile Include="Helper\PlanosConta\GruposConta\ConverterCadastroAtualizacaoParaGrupoConta.cs" />
     <Compile Include="Helper\PlanosConta\GruposConta\TraducaoOrdenacaoListaGruposConta.cs" />
     <Compile Include="Helper\Producao\Roteiros\ClassificacoesRoteiro\TraducaoOrdenacaoListaClassificacoesRoteiro.cs" />
@@ -537,10 +537,10 @@
     <Compile Include="Models\Condutores\Lista\ListaDto.cs" />
     <Compile Include="Models\PlanosConta\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
-    <Compile Include="Models\PlanosConta\V1\GruposConta\CategoriasConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
-    <Compile Include="Models\PlanosConta\V1\GruposConta\CategoriasConta\Lista\FiltroDto.cs" />
-    <Compile Include="Models\PlanosConta\V1\GruposConta\CategoriasConta\Lista\ListaDto.cs" />
-    <Compile Include="Models\PlanosConta\V1\GruposConta\CategoriasConta\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\PlanosConta\V1\CategoriasConta\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\PlanosConta\V1\CategoriasConta\Lista\FiltroDto.cs" />
+    <Compile Include="Models\PlanosConta\V1\CategoriasConta\Lista\ListaDto.cs" />
+    <Compile Include="Models\PlanosConta\V1\CategoriasConta\Lista\PermissoesDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\Lista\FiltroDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\Lista\ListaDto.cs" />
     <Compile Include="Models\PlanosConta\V1\GruposConta\Lista\PermissoesDto.cs" />
