#650 Refatoração da tela de cadastro de funcionário

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -268,7 +268,7 @@
     <Compile Include="Controllers\Condutores\GetCondutoresController.cs" />
     <Compile Include="Controllers\Condutores\PatchCondutoresController.cs" />
     <Compile Include="Controllers\Condutores\PostCondutoresController.cs" />
-    <Compile Include="Controllers\Funcionarios\PatchFuncionariosController.cs" />
+    <Compile Include="Controllers\Funcionarios\V1\PatchFuncionariosController.cs" />
     <Compile Include="Controllers\Funcionarios\V1\PostFuncionariosController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\DeleteCoresAluminioController.cs" />
     <Compile Include="Controllers\Produtos\V1\CoresAluminio\PatchCoresAluminioController.cs" />
@@ -718,19 +718,19 @@
     <Compile Include="Models\Estoques\V1\CadastroAtualizacao\CadastroAtualizacaoRapidaRealDto.cs" />
     <Compile Include="Models\Estoques\V1\CadastroAtualizacao\CadastroAtualizacaoRealDto.cs" />
     <Compile Include="Models\Estoques\V1\Configuracoes\ListaDto.cs" />
-    <Compile Include="Models\Funcionarios\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
-    <Compile Include="Models\Funcionarios\Configuracoes\DetalheDto.cs" />
-    <Compile Include="Models\Funcionarios\Configuracoes\ListaDto.cs" />
-    <Compile Include="Models\Funcionarios\Detalhe\AcessoDto.cs" />
-    <Compile Include="Models\Funcionarios\Detalhe\ContatosDto.cs" />
-    <Compile Include="Models\Funcionarios\Detalhe\DetalheDto.cs" />
-    <Compile Include="Models\Funcionarios\Detalhe\DocumentosEDadosPessoaisDto.cs" />
-    <Compile Include="Models\Funcionarios\Detalhe\PermisoesDto.cs" />
-    <Compile Include="Models\Funcionarios\Lista\ContatosDto.cs" />
-    <Compile Include="Models\Funcionarios\Lista\DocumentosDto.cs" />
-    <Compile Include="Models\Funcionarios\Lista\FiltroDto.cs" />
-    <Compile Include="Models\Funcionarios\Lista\ListaDto.cs" />
-    <Compile Include="Models\Funcionarios\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Configuracoes\DetalheDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Configuracoes\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\AcessoDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\DetalheDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\DocumentosEDadosPessoaisDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Detalhe\PermisoesDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\ContatosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\DocumentosDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\ListaDto.cs" />
+    <Compile Include="Models\Funcionarios\V1\Lista\PermissoesDto.cs" />
     <Compile Include="Helper\NotasFiscais\ConversorParticipanteModeloParaDto.cs" />
     <Compile Include="Models\Estoques\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Estoques\V1\Lista\ListaDto.cs" />
