--- a/Glass/Glass.UI.Web.csproj
+++ b/Glass/Glass.UI.Web.csproj
@@ -494,14 +494,18 @@
     <Content Include="Vue\Clientes\Tipos\Componentes\LstTipos.js" />
     <Content Include="Vue\Integracao\Integradores\Assets\LstIntegradores.css" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.Configuracao.js" />
+    <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.ItemHistorico.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.ItemLogger.js" />
+    <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.ItemEsquemaHistorico.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.JobIntegracao.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.Logger.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.OperacaoIntegracao.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.Integrador.js" />
     <Content Include="Vue\Integracao\Integradores\Componentes\LstIntegradores.js" />
     <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.Configuracao.html" />
+    <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.ItemHistorico.html" />
     <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.ItemLogger.html" />
+    <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.ItemEsquemaHistorico.html" />
     <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.Logger.html" />
     <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.JobIntegracao.html" />
     <Content Include="Vue\Integracao\Integradores\Templates\LstIntegradores.ParametroOperacaoIntegracao.html" />
