--- a/Api/Glass.API.Backend/Mef.config
+++ b/Api/Glass.API.Backend/Mef.config
@@ -603,6 +603,13 @@
         <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
       </exports>
     </part>
-    
+
+    <part type="Glass.Integracao.Negocios.Componentes.ProvedorHistorico, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Integracao.Historico.IProvedorHistorico, Glass.Integracao" />
+      </exports>
+    </part>
+
   </parts>
 </mef.configuration>
