--- a/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
+++ b/Negocios/Glass.Negocios.Entidades/Glass.Negocios.Entidades.csproj
@@ -119,6 +119,9 @@
     <Compile Include="Fiscal\IProvedorIcmsProdutoUf.cs" />
     <Compile Include="Fiscal\IProvedorMvaProdutoUf.cs" />
     <Compile Include="Global\GrupoCliente.cs" />
+    <Compile Include="Integracao\EventoItemIntegracao.cs" />
+    <Compile Include="Integracao\FalhaIntegracao.cs" />
+    <Compile Include="Integracao\ItemIntegracao.cs" />
     <Compile Include="Otimizacao\EstoqueChapaEntrada.cs" />
     <Compile Include="Estoque\ProdutoBaixaEstoquePesquisa.cs" />
     <Compile Include="Financeiro\ArquivoCartaoNaoIdentificado.cs" />
