#84018 - Remoção do appsettings que habilita a integração da Khan.
Related Work Items: #1446

--- a/Api/Glass.API.Backend/AppSettings.config
+++ b/Api/Glass.API.Backend/AppSettings.config
@@ -3,7 +3,7 @@
   <add key="authorizedUris" value="*" />
   <add key="diretorioSistema" value="../../Glass" />
   <add key="permitirXml" value="false" />
-  <add key="Khan:Integracao" value="True" />
+  <add key="Khan:Integracao" value="False" />
   <add key="Khan:EnderecoBase" value="http://www.ikhan.com.br/appskhan/knIntegrador/" />
   <add key="Khan:Token" value="CF58E1CE-9BCC-4AEF-9BC5-E79203A90B01" />
   <add key="Khan:Empresa" value="E001" />
