--- a/Glass/AppSettings.config
+++ b/Glass/AppSettings.config
@@ -14,7 +14,7 @@
   <add key="TempoTimeOut" value="20" />
   <!--<add key="CapptaAuthKey" value="DB47AAA763E74032A771C35FA88277F8" /> produção -->
   <add key="backendUrl" value="/backend" />
-  <add key="Khan:Integracao" value="True" />
+  <add key="Khan:Integracao" value="False" />
   <add key="Khan:EnderecoBase" value="http://www.ikhan.com.br/appskhan/knIntegrador/" />
   <add key="Khan:Token" value="CF58E1CE-9BCC-4AEF-9BC5-E79203A90B01" />
   <add key="Khan:Empresa" value="E001" />
